alteração da tela de login

--- a/src/main/webapp/WEB-INF/template/ui.xhtml
+++ b/src/main/webapp/WEB-INF/template/ui.xhtml
@@ -19,7 +19,7 @@
 								<i class="fa fa-user fa-1x" />
 							</h:outputLink>
 							<p:overlayPanel for="user" showEvent="mouseover" styleClass="labelSair" >
-								<h:outputLink value="/local/logout"  >
+								<h:outputLink value="/locar/logout"  >
 									<h:outputText value="Sair" />
 									<i class="fa fa-sign-out fa-1x" />
 								</h:outputLink>
