finalização do cadastro de veículo e iniciado o cadastro de categoria

--- a/src/main/webapp/WEB-INF/template/ui.xhtml
+++ b/src/main/webapp/WEB-INF/template/ui.xhtml
@@ -11,6 +11,7 @@
 					<div class="clearfix">
 						<div class="logo">
 							<p:graphicImage library="images" name="favicon.png" width="50" height="50" />
+							<span style="color: #fff; font-size: 30px;" > <h:outputText value="#{titulo}" style="color=#FFF;" ></h:outputText></span>
 						</div>
 						
 						<div class="user" >
