--- a/src/main/webapp/WEB-INF/template/blank.xhtml
+++ b/src/main/webapp/WEB-INF/template/blank.xhtml
@@ -14,10 +14,11 @@
 			href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700'
 			rel='stylesheet' type='text/css' />
 		<link
-			href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
+			href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css"
 			rel="stylesheet" />
 
 		<h:outputStylesheet name="ste.css" library="css" />
+		<ui:insert name="script-header" ></ui:insert>
 	</h:head>
 	<h:outputScript library="primefaces" name="jquery/jquery.js"
 		target="head" />
