finalização do protótipo

--- a/src/main/webapp/WEB-INF/template/blank.xhtml
+++ b/src/main/webapp/WEB-INF/template/blank.xhtml
@@ -19,6 +19,7 @@
 
 		<h:outputStylesheet name="ste.css" library="css" />
 		<ui:insert name="script-header" ></ui:insert>
+		<ui:insert name="css-header" ></ui:insert>
 	</h:head>
 	<h:outputScript library="primefaces" name="jquery/jquery.js"
 		target="head" />
