--- a/src/main/webapp/WEB-INF/template/ui.xhtml
+++ b/src/main/webapp/WEB-INF/template/ui.xhtml
@@ -16,7 +16,7 @@
 						
 						<div class="user" >
 							<h:outputLink id="user" >
-								<h:outputText value="" />
+								<h:outputText value="#{request.remoteUser}" />
 								<i class="fa fa-user fa-1x" />
 							</h:outputLink>
 							<p:overlayPanel for="user" showEvent="mouseover" styleClass="labelSair" >
