--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -40,6 +40,10 @@ body {
 	box-sizing: border-box; /* Opera/IE 8+ */
 }
 
+#formlogin a {
+	color: #fff;
+}
+
 .page_login #formlogin .steTitulo {
 	font-size: 20px;
 	font-weight: 400;
